# rgb_lidar_thermal_calib

./: CMakeLists.txt  package.xml
launch/: rgb_lidar_thermal_calib.launch
script/: lidar_camera_calib.m
src/: extraction_node.cpp
